--- a/Css/style.css
+++ b/Css/style.css
@@ -9,6 +9,7 @@ body{
     align-items: center;
     margin: 0;
     height: 100vh;
+    background-color: rgb(112, 33, 185);
 }
 
 .container{
@@ -18,9 +19,6 @@ body{
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0,0.3);
     margin: 10px;
-}
-
-h1{
 }
 
 .view-password{
@@ -38,6 +36,7 @@ input{
     outline: none;
     font-size: 22px;
     letter-spacing: 3px;
+    color: rgb(52, 22, 161);
 }
 
 input::placeholder{
@@ -88,6 +87,7 @@ input::placeholder{
     align-items: center;
     font-size: 16px;
     justify-content: center;
+    transition: 0.4s;
 }
 
 .active.alert-container{
